done integration category in homepage
