# internal/api-gateway/routes/router.go
@@ -32,6 +32,7 @@ func NewRouter(
 	accessTokenMiddleware *middleware.JwtMiddleware,
 	permissionMiddleware *middleware.PermissionMiddleware,
 	administrativeDivisionHandler api_gateway_handler.IAdministrativeDivisionHandler,
+	categoryHandler api_gateway_handler.ICategoryHandler,
 ) *Router {
 	apiV1Group := router.Group("/api/v1")
 
@@ -43,6 +44,7 @@ func NewRouter(
 	registerRoleHandler(apiV1Group, permissionMiddleware, accessTokenMiddleware, roleHandler)
 	registerUserMeHandler(apiV1Group, permissionMiddleware, accessTokenMiddleware, userMeHandler)
 	registerAddressDataEndpoint(apiV1Group, accessTokenMiddleware, administrativeDivisionHandler)
+	registerCategoryEndpoint(apiV1Group, accessTokenMiddleware, categoryHandler)
 
 	return &Router{
 		Router: router,
@@ -169,5 +171,13 @@ func registerAddressDataEndpoint(group *gin.RouterGroup, accessTokenMiddleware *
 		addressGroup.GET("/provinces", divisionHandler.GetProvinces)
 		addressGroup.GET("/provinces/:provinceID/districts", divisionHandler.GetDistricts)
 		addressGroup.GET("/provinces/:provinceID/districts/:districtID/wards", divisionHandler.GetWards)
+	}
+}
+
+func registerCategoryEndpoint(group *gin.RouterGroup, accessTokenMiddleware *middleware.JwtMiddleware, categoryHandler api_gateway_handler.ICategoryHandler) {
+	categoryGroup := group.Group("/categories")
+	categoryGroup.Use(accessTokenMiddleware.JwtAccessTokenMiddleware())
+	{
+		categoryGroup.GET("", categoryHandler.GetCategories)
 	}
 }
